<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.card.MaterialCardView
            style="@style/CustomCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dailyPoem_black_background"
            tools:context=".ui.ShareBottomSheet">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/seoulhangang"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textShareDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/seoulhangang"
                    android:text="@string/share_description"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textShare" />

                <LinearLayout
                    android:id="@+id/shareWrap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="32dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textShareDescription">

                    <ImageView
                        android:id="@+id/buttonShareKakaoTalk"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="10dp"
                        android:contentDescription="@string/share_kakaotalk"
                        android:src="@drawable/ic_button_share_kakaotalk" />

                    <ImageView
                        android:id="@+id/buttonShareFacebook"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:contentDescription="@string/share_facebook"
                        android:focusable="true"
                        android:src="@drawable/ic_button_share_facebook" />

                    <ImageView
                        android:id="@+id/buttonShareInstagram"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:contentDescription="@string/share_instagram"
                        android:focusable="true"
                        android:src="@drawable/ic_button_share_instagram" />

                    <ImageView
                        android:id="@+id/buttonShareTwitter"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:contentDescription="@string/share_twitter"
                        android:focusable="true"
                        android:src="@drawable/ic_button_share_twitter" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>